# grok2api

./: .gitignore  ANTHROPIC_API.md  ANTHROPIC_DEMO.py  ANTHROPIC_QUICKSTART.md  ANTHROPIC_接口说明.md  Dockerfile  Dockerfile.hf  HF_DEPLOY_GUIDE.md  HF_SPACE_README.md  QUICK_START.md  README_FIX.md  create_litellm_config.py  docker-compose.dockerhub.yml  docker-entrypoint-hf.sh  litellm_config.yaml  main.py  pyproject.toml  readme.md  requirements.txt  start_litellm.py  清理总结.txt
app/api/v1/: anthropic.py  chat.py  dashscope.py  gemini.py  tasks.py  tts.py
app/core/: auth.py  config.py  exception.py  storage.py
app/models/: anthropic_schema.py  grok_models.py  openai_schema.py
app/services/anthropic/: __init__.py  converter.py  skill_handler.py  tool_simulator.py
app/services/grok/: client.py  processer.py  task_manager.py  token.py  tts.py
app/services/openai/: tool_adapter.py
app/template/: admin.html
data/: setting.toml
