[project]
name = "grok2api"
version = "1.3.1"
description = "Grok API 转换服务"
requires-python = ">=3.10"
dependencies = [
    "toml==0.10.2",
    "fastapi==0.119.0",
    "uvicorn==0.37.0",
    "python-dotenv==1.1.1",
    "curl_cffi==0.13.0",
    "requests==2.32.5",
    "starlette==0.48.0",
    "pydantic==2.12.2",
    "aiofiles==25.1.0",
    "aiomysql==0.2.0",
    "redis==6.4.0",
    "fastmcp==2.12.4",
    "cryptography==46.0.3",
    "orjson==3.11.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

